"Cursor to selected" give wrong cursor position #78135

Closed
opened 2020-06-22 18:43:17 +02:00 by Alberto Velázquez · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.74

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: (newest version of Blender that worked as expected)

Short description of error
When I use the cursor to selected operator (Shift-S) it give a wrong position of the cursor, giving different solutions. It happens at least with some three vertex selections.

The problem also happen with 2.90, and it's only a problem of this file (created with 2.83 only)

Exact steps for others to reproduce the error

  • Open File
  • Tab to edit object selected
  • Not change the triangles selected
  • Shift+S "Cursor to selected"

Solution
image.png

Expected solution
image.png

bugReport.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.74 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: (newest version of Blender that worked as expected) **Short description of error** When I use the cursor to selected operator (Shift-S) it give a wrong position of the cursor, giving different solutions. It happens at least with some three vertex selections. The problem also happen with 2.90, and it's only a problem of this file (created with 2.83 only) **Exact steps for others to reproduce the error** - Open File - Tab to edit object selected - Not change the triangles selected - Shift+S "Cursor to selected" Solution ![image.png](https://archive.blender.org/developer/F8637211/image.png) Expected solution ![image.png](https://archive.blender.org/developer/F8637209/image.png) [bugReport.blend](https://archive.blender.org/developer/F8637215/bugReport.blend)

Added subscriber: @AlbertoVelazquez

Added subscriber: @AlbertoVelazquez
Alberto Velázquez changed title from "Cursor to selected" give wrong positions to "Cursor to selected" give wrong cursor position 2020-06-22 18:43:52 +02:00

Added subscriber: @martinbergwerf-3

Added subscriber: @martinbergwerf-3

This is because you have your Pivot Point set to Bounding Box Center...

This is because you have your Pivot Point set to Bounding Box Center...

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Campbell Barton self-assigned this 2020-06-23 08:40:52 +02:00

It's not because bounding box, same problem happens if you use 3d cursor, individual origins and active element.

It's not because bounding box, same problem happens if you use 3d cursor, individual origins and active element.

This issue was referenced by 309cfbceaa

This issue was referenced by 309cfbceaa590828b61bfd72f12ef976f9808392

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78135
No description provided.